# jlox

./: Cargo.toml  README.md
lox_files/: fact.lox  fib.lox  hello.lox  init.lox  scope.lox
src/: ast.rs  expr.rs  interpreter.rs  lib.rs  lox.rs  main.rs  parser.rs  resolver.rs  scanner.rs  stmt.rs  uuid.rs
src/interpreter/: environment.rs  lox_callable.rs  object.rs
src/interpreter/object/: class.rs  function.rs  instance.rs  lox_callable.rs
tests/: test_lox_programs.rs
